--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,12 @@
+streamlit==1.37.0
+pandas==2.2.2
+matplotlib==3.9.1
+opencv-python==4.8.1.78
+mediapipe==0.10.14
+numpy==1.26.4
+Pillow==10.4.0
+deep-translator==1.11.4
+cvzone==1.6.1
+tensorflow==2.15.0
+protobuf==4.25.3
 
